force-app/main/default/objects/Related_Opportunity__c/Related_Opportunity__c.object-meta.xml
<CustomObject>
    <label>Related Opportunity</label>
    <nameField>
        <displayFormat>RO-{00000}</displayFormat>
        <label>Related Opportunity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>