force-app/main/default/objects/Related_Opportunity__c/fields/Cancelation_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Cancelation_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>GTMS-26501: Update Upgrade and Cancel Opportunity Relationship</description>
    <inlineHelpText>Only C&amp;R Amended Opportunities will have this field populated.</inlineHelpText>
    <label>Cancellation Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Related Cancellations(Returns)</relationshipLabel>
    <relationshipName>Cancelation_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>