force-app/main/default/objects/Related_Opportunity__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Created this field as part of GTMS-29983</description>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reprocessing Opportunities</fullName>
            </value>
            <value>
                <fullName>Virtual Return Opportunities</fullName>
            </value>
            <value>
                <fullName>Parent Contract</fullName>
            </value>
            <value>
                <fullName>New Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>