force-app/main/default/objects/Related_Opportunity__c/fields/Renewal_of_Expansion_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Renewal_of_Expansion_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This Field is lookup to opportunity</description>
    <label>Renewal of Expansion Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Related Expansion Opportunities</relationshipLabel>
    <relationshipName>Related_Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>