force-app/main/default/objects/Related_Opportunity__c/fields/Revenue_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Related Renewal Opportunities for Expansions</relationshipLabel>
    <relationshipName>Related_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>