force-app/main/default/objects/Related_Opportunity__c/fields/Split_Renewal_Expansion__c.field-meta.xml
<CustomField>
    <fullName>Split_Renewal_Expansion__c</fullName>
    <description>This field is to store the value of Split Renewal Expansion</description>
    <label>Split Renewal Expansion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>