force-app/main/default/objects/Related_Opportunity__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid Pilot</fullName>
            </value>
            <value>
                <fullName>Consolidated Renewal</fullName>
            </value>
            <value>
                <fullName>Related Opportunity</fullName>
            </value>
            <value>
                <fullName>Reprocessing Opportunity</fullName>
            </value>
            <value>
                <fullName>Virtual Return Opportunity</fullName>
            </value>
            <value>
                <fullName>Upgrade Opportunity</fullName>
            </value>
            <value>
                <fullName>Other Swap Opportunity</fullName>
            </value>
            <value>
                <fullName>Fixed End Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>